# seattlehackaton3

./: .env.example  .gitignore  AUDIO_TRANSCRIPTION.md  CLAUDE.md  CONTRIBUTING.md  DATABASE_STATUS.md  DATA_LOADING_GUIDE.md  IMPLEMENTATION_STATUS.md  INDEX.md  INSTALLATION_INSTRUCTIONS.md  INSTALL_GUIDE.md  Makefile  OLLAMA_INTEGRATION.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SECURITY.md  SETUP_COMPLETE.md  SETUP_OLLAMA_AND_DATABASES.md  TEST_REPORT.md  TEST_RESULTS.md  docker-compose.yml  fix-docker-credentials.sh  fix-docker-sudo.sh  install-docker.sh  install.sh  pyproject.toml  service-sense-enhanced-prd-english-only(1).md  setup-services.sh  start_api.sh  test_all_services.py  test_api_simple.py  test_audio_transcription.py  test_basic.py  test_input_processor.py  verify-setup.sh
.claude/commands/: init.md
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: QUICKSTART.md
infra/monitoring/: prometheus.yml
ml/models/: .gitkeep
ml/training/: train_models.py
scripts/: init_chromadb_embedded.py  init_databases.py  install_all.sh  install_databases.sh  load_data.py  setup_after_install.sh  test_audio.sh
services/api-gateway/: Dockerfile  main.py
services/entity-extraction/: Dockerfile  main.py
services/graph-query/: Dockerfile  main.py
services/graphrag-orchestrator/: Dockerfile  main.py
services/input-processor/: Dockerfile  main.py
services/llm-triage/: Dockerfile  main.py
services/ml-prediction/: Dockerfile  main.py
services/response-formatter/: Dockerfile  main.py
services/vector-search/: Dockerfile  main.py
shared/: __init__.py
shared/config/: settings.py
shared/models/: __init__.py  prediction.py  request.py  service.py
shared/utils/: __init__.py  cache.py  logging.py  metrics.py  ollama_client.py
tests/: test_api.py
